@@ -1,0 +1,11 @@
+<?php
+
+/**
+ * Class CertificateRQueryContext
+ * @property Certificate $object
+ * @ignore
+ */
+class CertificateRQueryContext extends RQueryContext
+{
+
+}
