@@ -179,6 +179,10 @@ require_once $basedir . '/misc-classes/SecurityProfileGroupRQueryContext.php';
 
 require_once $basedir . '/misc-classes/DeviceRQueryContext.php';
 
+require_once $basedir . '/misc-classes/DHCPRQueryContext.php';
+require_once $basedir . '/misc-classes/CertificateRQueryContext.php';
+
+
 require_once $basedir . '/misc-classes/CsvParser.php';
 require_once $basedir . '/misc-classes/trait/PanSubHelperTrait.php';
 require_once $basedir . '/misc-classes/PanAPIConnector.php';
